@startuml organisations-and-professions
entity Organisation {
  A Regulatory Authority
  --
  * id: uuid
  * name: string
  alternateName: string
  * address: string
  * url: string
  * email: string
  contactUrl: string
  * telephone: string
  fax: string
}

entity Regulation {
  The state of regulation. A profession is regulated
  by an organisation in a particular area or time.
  Can be statutory or voluntary.
  --
  * id: uuid
  --
  * occupationLocation: string[]
  * regulationType: string
  validFrom: datetime
  validThrough: datetime
}

entity Profession {
  e.g. Primary School Teacher
  --
  * id: uuid
  --
  * name: string
  alternateNames: string[]
  * description: string
  reservedActivities: string[]
  iscoCode: number
}

entity Qualification {
  The requirements for a regulation
  --
  * id: uuid
  --
  * qualificationLevel: string
}

entity Legislation {
  The primary source of a regulation
  --
  * id: uuid
  --
  * name: string
  * url: string
}

entity Industry {
  An industry or sector
  --
  * id: uuid
  --
  name: string
  description: string
}

Profession }o-|| Industry

Profession ||--|{ Regulation

Legislation }o-o{ Regulation
Regulation ||-o{ Qualification

Regulation }o--|{ Organisation
@enduml
